[package]
name = "task-manager-backend"
version = "0.1.0"
edition = "2021"

[dependencies]

actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
sqlx = { version = "0.6", features = ["runtime-actix-rustls", "mysql"] }
dotenv = "0.15"

[dev-dependencies]
sqlx = { version = "0.6", features = ["runtime-actix-rustls", "mysql", "migrate"] }